@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+our $VERSION = 0.001_000;
+
+use Test::More tests => 1;
+
+use_ok('Alien::Pluto');
