@@ -1,5 +1,7 @@
 Revision history for Alien::Pluto.
 
+    DON'T FORGET TO BUMP Alien::Texinfo TO v0.003!!!
+
 0.001000 2017-12-14
 
     - Initial Release!
